# blockifier

./: .gitignore  Cargo.toml  commitlint.config.js
.github/actions/setup-native-dep/: action.yml
.github/actions/setup-native-dep-macos/: action.yml
.github/workflows/: ci.yml  coverage.yml
crates/blockifier/: Cargo.toml
crates/blockifier/bench/: blockifier_bench.rs
crates/blockifier/fallback_test_contract/: Scarb.toml
crates/blockifier/fallback_test_contract/src/: lib.cairo
crates/blockifier/feature_contracts/cairo1/: sierra_test_contact.cairo  sierra_test_contract.cairo  test_contract.cairo
crates/blockifier/feature_contracts/cairo2/: Scarb.toml
crates/blockifier/feature_contracts/cairo3/: Scarb.toml
crates/blockifier/oz_erc20/: Scarb.toml
crates/blockifier/oz_erc20/src/: lib.cairo
crates/blockifier/src/: debug.rs  lib.rs  state.rs  test_utils.rs
crates/blockifier/src/abi/: abi_utils.rs  sierra_types.rs
crates/blockifier/src/blockifier/: stateful_validator.rs  stateful_validator_test.rs  transaction_executor.rs  transaction_executor_test.rs
crates/blockifier/src/concurrency/: versioned_state_proxy_test.rs
crates/blockifier/tests/: erc20_tests.rs  fallback_tests.rs  yas_factory_tests.rs  yas_faucet_tests.rs  yas_pool_tests.rs
crates/cairo_serde/: Cargo.toml
crates/cairo_serde/src/: lib.rs  traits.rs  utils.rs
crates/cairo_serde_macro/: Cargo.toml
crates/cairo_serde_macro/src/: lib.rs
crates/cairo_serde_macro/tests/: test_macro_structs.rs
crates/native_blockifier/src/: py_block_executor.rs  py_validator.rs
(+71 files in other folders)
